traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:36: error: '(' expected but identifier found.
      if estFaceMur(){
         ^Snake:42: error: illegal start of simple expression
    }
    ^Snake:45: error: '(' expected but identifier found.
      if estFaceMur(){
         ^Snake:51: error: illegal start of simple expression
    }
    ^