traversal.snake.Snake.scala.code
override def run() {
  baisseBrosse()
  var direction=getDirection()
  while (!positionfinale()){
    while (!estFaceMur()){
      forward()
    }
    direction=getDirection()
    if (direction==Direction.EST){
      left()
      if (!positionfinale){
        forward()
        left()
      }
      else {
        right()
      }
    }
    else {
      right()
      if (!positionfinale){
        forward()
        right()
      }
      else {
        left()
      }
    }
  }
}

def positionfinale : Boolean = {
  if (estFaceMur()){
    if (getDirection()==Direction.EST){
      left()
      if estFaceMur(){
        return true
      }
      else {
        return false
      }
    }
    else {
      right()
      if estFaceMur(){
        return true
      }
      else {
        return false
      }
    }
  }
  else {
    return false
  }
}